sandbox/output
TicketDispenserTest.java:81: error: constructor TurnNumberSequenceRegular in class TurnNumberSequenceRegular cannot be applied to given types;
        TurnNumberSequence regularTurnNumberSequence = new TurnNumberSequenceRegular(2001);
                                                       ^
  required: no arguments
  found: int
  reason: actual and formal argument lists differ in length
1 error
